set collapse-list fixed button width

--- a/src/components/collapse-list.css
+++ b/src/components/collapse-list.css
@@ -2,6 +2,9 @@
 	display: flex;
 	flex-direction: column;
 }
+.collapse-list-container button {
+	width: 68px;
+}
 .collapse-list-header {
 	display: flex;
 	justify-content: space-between;
